tests/machine/x/c/group_by_having.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_having.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_having.c:142:22: error: invalid initializer
  142 |   list_bigItem big = 0;
      |                      ^
/workspace/mochi/tests/machine/x/c/group_by_having.c:143:13: error: incompatible type for argument 1 of ‘_json_int’
  143 |   _json_int(big);
      |             ^~~
      |             |
      |             list_bigItem
/workspace/mochi/tests/machine/x/c/group_by_having.c:63:27: note: expected ‘int’ but argument is of type ‘list_bigItem’
   63 | static void _json_int(int v) { printf("%d", v); }
      |                       ~~~~^

   1: #include <stdio.h>
